--- a/wx_dev/pom.xml
+++ b/wx_dev/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.wx.dev</groupId>
@@ -152,8 +153,6 @@
 			<artifactId>cas-client-core</artifactId>
 			<version>3.2.1</version>
 		</dependency>
-		<!-- <dependency> <groupId>org.apereo.cas</groupId> <artifactId>cas-server-webapp-tomcat</artifactId> <version>5.3.1</version> </dependency> -->
-
 
 		<dependency>
 			<groupId>org.opensaml</groupId>
